feat: Enhance event component with content rendering and update styles for social preview

--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -4,7 +4,7 @@
 <app-user-profile [pubkey]="item.event.pubkey"></app-user-profile>
 <div class="event-content" (click)="openEvent()">
     <!-- {{ item.event.pubkey}}<br> -->
-    {{ item.data }}
+      <app-content [content]="item.data"></app-content>
 </div>
 } @else {
 <div class="event-content">
