--- a/src/app/components/social-preview/social-preview.component.html
+++ b/src/app/components/social-preview/social-preview.component.html
@@ -11,7 +11,7 @@
         </mat-card-content>
         } @else {
         @if (preview.image) {
-        <img mat-card-image [src]="preview.image" [alt]="preview.title || 'Link preview image'">
+        <img class="image" mat-card-image [src]="preview.image" [alt]="preview.title || 'Link preview image'">
         }
         <mat-card-header>
             <mat-card-title>{{preview.title || 'No title available'}}</mat-card-title>
