--- a/src/app/components/social-preview/social-preview.component.scss
+++ b/src/app/components/social-preview/social-preview.component.scss
@@ -1,9 +1,14 @@
 .social-preview-card {
     // background-color: var(--mat-sys-inverse-on-surface);
     display: block;
+    max-width: 320px;
 }
 
 .social-preview-card:hover {
     text-decoration: none;
     color: inherit;
+}
+
+.image {
+ 
 }
