feat: Implement LocalSettingsService for managing local settings and state persistence. Persist the state of the side menu.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -175,8 +175,7 @@
 
   @if (app.initialized()) {
   <!-- Sidenav container now below the toolbar -->
-  <mat-sidenav-container class="sidenav-container" autosize="true">
-    <!-- Side navigation -->
+  <mat-sidenav-container class="sidenav-container" autosize="true">    <!-- Side navigation -->
     <mat-sidenav #sidenav class="sidenav no-print"
       [ngClass]="{ 'sidenav-labels': displayLabels(), 'sidenav-small': !displayLabels()  }" [opened]="opened()"
       [mode]="layout.isHandset() ? 'over' : 'side'" [fixedInViewport]="false">
