feat: Implement replies handling in EventPageComponent and update related methods

--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -22,6 +22,11 @@
 </div>
 }
 
+
+@for(event of replies(); track event.id) {
+    <app-event [id]="event.id"></app-event>
+}
+
 <!-- @let item = event();
 
 @if (item) {
