feat: Add support for Nostr mentions in content component with click handling and styling

--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -83,3 +83,17 @@
 .social-preview {
     margin-top: 1rem;
 }
+
+.nostr-mention {
+    color: var(--mat-sys-primary);
+    cursor: pointer;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+
+    &:active {
+        color: var(--mat-sys-primary-container);
+    }
+}
