--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -5,6 +5,10 @@
         <span>{{token.content}}</span>
       } @else if (token.type === 'linebreak') {
         <br>
+      } @else if (token.type === 'nostr-mention') {
+        <span class="nostr-mention" (click)="onNostrMentionClick(token)">
+          &#64;{{token.nostrData?.displayName}}
+        </span>
       } @else if (token.type === 'url') {
         <a [href]="token.content" target="_blank" rel="noopener noreferrer">{{token.content}}</a>
       } @else if (token.type === 'youtube') {
