--- a/src/app/pages/event/event.component.scss
+++ b/src/app/pages/event/event.component.scss
@@ -35,3 +35,25 @@
     margin-top: 0.5rem;
     opacity: 0.9;
 }
+
+.view-more-replies {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.view-more-button {
+    font-size: 0.875rem;
+    color: var(--mat-sys-primary);
+    border-color: var(--mat-sys-outline-variant);
+    
+    &:hover {
+        background-color: var(--mat-sys-primary-container);
+    }
+    
+    mat-icon {
+        font-size: 1rem;
+        width: 1rem;
+        height: 1rem;
+        margin-right: 0.25rem;
+    }
+}
