feat: Add emoji support in ContentComponent with parsing and display enhancements. Don't want to put external dependency for emojis right now, but "node-emoji" might be an alternative.

--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -5,6 +5,8 @@
         <span>{{token.content}}</span>
       } @else if (token.type === 'linebreak') {
         <br>
+      } @else if (token.type === 'emoji') {
+        <span class="emoji-token" [title]="token.content">{{token.emoji}}</span>
       } @else if (token.type === 'nostr-mention') {
         <span class="nostr-mention" (click)="onNostrMentionClick(token)">
           &#64;{{token.nostrData?.displayName}}
