--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -97,3 +97,10 @@
         color: var(--mat-sys-primary-container);
     }
 }
+
+.emoji-token {
+    font-size: 1.2em;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 1;
+}
