--- a/src/app/app.html
+++ b/src/app/app.html
@@ -149,8 +149,8 @@
     </mat-menu>
 
     <button mat-icon-button (click)="toggleProfileSidenav()" aria-label="Toggle profile" class="profile-button">
-      @if (accountMetadata()?.data?.picture) {
-      <img [src]="accountMetadata()?.data?.picture" class="profile-button-avatar" alt="Profile picture">
+      @if (accountState.profile()?.data?.picture) {
+      <img [src]="accountState.profile()?.data?.picture" class="profile-button-avatar" alt="Profile picture">
       } @else {
 
       @if(app.authenticated()) {
@@ -246,7 +246,7 @@
           }
         </button>
         <div class="profile-header">
-          @if (accountMetadata(); as metadata) {
+          @if (accountState.profile(); as metadata) {
           @if (metadata?.data?.picture) {
           <div class="profile-avatar">
             <img [src]="metadata.data.picture" alt="Profile picture" class="avatar-image">
@@ -285,7 +285,7 @@
           </div>
 
           @if(app.authenticated()) {
-          <h2>{{ nostrService.account()?.name || (nostrService.account()?.pubkey | npub) }}</h2>
+          <h2>{{ accountState.account()?.name || (accountState.pubkey() | npub) }}</h2>
           } @else {
           <h2>Not logged in</h2>
           }
@@ -294,7 +294,7 @@
 
         <mat-nav-list>
           @if(app.authenticated()) {
-          <a mat-list-item [routerLink]="['/p', nostrService.account()?.pubkey]" (click)="toggleProfileSidenav()">
+          <a mat-list-item [routerLink]="['/p', accountState.pubkey()]" (click)="toggleProfileSidenav()">
             <mat-icon matListItemIcon>person</mat-icon>
             <span>My Profile</span>
           </a>
@@ -325,9 +325,9 @@
         @if (nostrService.hasAccounts()) {
         <mat-nav-list class="accounts-list">
           @for (account of nostrService.accounts(); track account.pubkey) {
-          @if (account.pubkey !== nostrService.account()?.pubkey) {
+          @if (account.pubkey !== accountState.account()?.pubkey) {
 
-          @if(nostrService.getMetadataForAccount(account.pubkey); as metadata) {
+          @if(accountState.getAccountProfile(account.pubkey); as metadata) {
           <a mat-list-item (click)="switchAccount(account.pubkey); toggleProfileSidenav()" class="account-item">
             @if (metadata.data?.picture; as account) {
             <div class="account-avatar" matListItemIcon>
@@ -440,7 +440,7 @@
       <div class="mobile-nav-label">Messages</div>
     </a>
 
-    <a mat-button class="mobile-nav-button" [routerLink]="['/p', nostrService.pubkey()]" routerLinkActive="active-link"
+    <a mat-button class="mobile-nav-button" [routerLink]="['/p', accountState.pubkey()]" routerLinkActive="active-link"
       [routerLinkActiveOptions]="{exact: false}">
       <mat-icon>account_circle</mat-icon>
       <div class="mobile-nav-label">Profile</div>
