--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -1,10 +1,13 @@
 <div class="accounts-container">
   <h1 class="title">Manage Accounts</h1>
 
+  @let account = accountState.account();
+  @let metadata = accountState.profile()?.data;
+
   <div class="current-account">
     <h2>Current Account</h2>
     <mat-card class="account-card">
-      @if (currentAccount() && nostrService.getMetadataForAccount(currentAccount()!.pubkey)?.data; as metadata) {
+      @if (account && metadata) {
       <div class="account-content">
         <div class="account-avatar">
           @if (metadata.picture) {
@@ -15,19 +18,19 @@
         </div>
         <div class="account-details">
           <h3>{{ metadata.display_name || metadata.name || 'Unnamed Account' }}</h3>
-          <p class="pubkey">{{ currentAccount()?.pubkey | npub }}</p>
-          <p class="account-source">Type: {{ currentAccount()?.source }} • Last used: {{ currentAccount()?.lastUsed |
+          <p class="pubkey">{{ account.pubkey | npub }}</p>
+          <p class="account-source">Type: {{ account.source }} • Last used: {{ account.lastUsed |
             date:'medium' }}</p>
         </div>
       </div>
-      } @else if (currentAccount()) {
+      } @else if (account) {
       <div class="account-content">
         <div class="account-avatar">
           <mat-icon class="avatar-placeholder">account_circle</mat-icon>
         </div>
         <div class="account-details">
           <h3>Unnamed Account</h3>
-          <p class="account-source">Type: {{ currentAccount()?.source }} • Last used: {{ currentAccount()?.lastUsed |
+          <p class="account-source">Type: {{ account.source }} • Last used: {{ account.lastUsed |
             date:'medium' }}</p>
         </div>
       </div>
@@ -41,11 +44,11 @@
 
   @if (nostrService.accounts().length > 0) { <div class="all-accounts">
     <h2>Account List</h2>    <mat-list class="accounts-list"> @for (account of nostrService.accounts(); track account.pubkey) { <mat-list-item
-        class="account-item" [class.current-account-item]="account.pubkey === currentAccount()?.pubkey"
-        (click)="account.pubkey !== currentAccount()?.pubkey ? switchAccount(account.pubkey) : null">
+        class="account-item" [class.current-account-item]="account.pubkey === accountState.account()?.pubkey"
+        (click)="account.pubkey !== accountState.account()?.pubkey ? switchAccount(account.pubkey) : null">
         <div class="account-item-content">
           <div class="account-avatar list-avatar">
-            @if (nostrService.getMetadataForAccount(account.pubkey)?.data?.picture; as picture) {
+            @if (accountState.getAccountProfile(account.pubkey)?.data?.picture; as picture) {
             <img [src]="picture" alt="Profile picture" class="avatar-image">
             } @else {
             <mat-icon>account_circle</mat-icon>
@@ -53,7 +56,7 @@
           </div>
           <div class="account-list-content">
             <div class="account-name">
-              @if (nostrService.getMetadataForAccount(account.pubkey)?.data; as metadata) {
+              @if (accountState.getAccountProfile(account.pubkey)?.data; as metadata) {
               {{ metadata.display_name || metadata.name || 'Unnamed Account' }}
               } @else {
               Unnamed Account
