refactor: Fixes effect and signal issues. Fixes reset on profile.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
   <app-loading-overlay [message]="appState.loadingMessage()"></app-loading-overlay>
   }
 
-  @if (logger.logOverlay()) {
+  @if (logger.logOverlay) {
   <app-debug-overlay></app-debug-overlay>
   }
 
