--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -18,7 +18,7 @@
           <iframe
             width="560"
             height="315"
-            [src]="getYouTubeEmbedUrl(token.content)"
+            [src]="media.getYouTubeEmbedUrl(token.content)"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
