refactor: Rename 'createdAt' to 'created' in Device interface and update related code

--- a/src/app/pages/notifications/settings/settings.component.html
+++ b/src/app/pages/notifications/settings/settings.component.html
@@ -27,7 +27,7 @@
                     </div>
                     <div matListItemLine>
                       Device ID: {{device.deviceId | slice:0:8}}... • 
-                      Registered: {{device.createdAt | date:'medium'}}
+                      Registered: {{device.created | date:'medium'}}
                     </div>
                     <div matListItemMeta>
                         <button mat-icon-button color="warn" class="delete-button"
