--- a/src/app/pages/messages/messages.component.scss
+++ b/src/app/pages/messages/messages.component.scss
@@ -1,5 +1,5 @@
 .messages-container {
-  height: 100%;
+  height: calc(100vh - 80px);
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -43,7 +43,7 @@
 
   .chat-list-container {
     width: 320px;
-    min-width: 320px;
+    // min-width: 320px;
     display: flex;
     flex-direction: column;
     border-right: 1px solid var(--mat-divider-color);
@@ -111,7 +111,7 @@
 
           .chat-info {
             flex: 1;
-            min-width: 0;
+            // min-width: 0;
 
             .chat-name-row {
               display: flex;
@@ -456,7 +456,7 @@
     .messages-layout {
       &.mobile-view .chat-list-container {
         width: 100%;
-        min-width: 100%;
+        // min-width: 100%;
       }
 
       .chat-content-container {
